x11/gnome/shell/patches/patch-config_h_meson
REVERT:
From 9bc89b821cf09195418f20225bbec39c0567d263 Mon Sep 17 00:00:00 2001
From: =?UTF-8?q?Jonas=20=C3=85dahl?= <jadahl@gmail.com>
Date: Wed, 17 Aug 2022 21:43:21 +0200
Subject: [PATCH] main: Prepend RPATH or RUNPATH paths to gir search paths

This triggers the following error:
../gnome-shell-44.0/src/main.c:135:3: warning: implicit declaration of function 'ElfW' is invalid in C99 [-Wimplicit-function-declaration]
  ElfW (Dyn) *dyn;
  ^
../gnome-shell-44.0/src/main.c:135:9: error: use of undeclared identifier 'Dyn'
  ElfW (Dyn) *dyn;

Index: config.h.meson
--- config.h.meson.orig
+++ config.h.meson
@@ -36,6 +36,3 @@
 
 /* Define if polkit defines autocleanup functions */
 #mesondefine HAVE_POLKIT_AUTOCLEANUP
-
-/* Define to 1 if the <elf.h> and <link.h> header file exist. */
-#mesondefine HAVE_EXE_INTROSPECTION
